# ott_provider

./: .gitignore  exceptions.py  pyproject.toml  pytest.ini  readme.md
apps/: asgi.py  models.py  repositories.py  settings.py  urls.py  wsgi.py
audio/: models.py  repositories.py  serializers.py  services.py  urls.py  views.py
audio/migrations/: 0001_initial.py  0002_audio_path.py  0003_audio_is_audio_required.py  0004_audio_user_project_user.py
configs/: config.py  config_example.yml
job_scheduler/: apps.py  scheduler.py
job_scheduler/jobs/: save_mp3_and_bulk_update_audio.py
tests/audio/: repo_test.py  service_test.py
tests/utils/: test_text.py  text_handler_test.py  tts_provider_test.py
user/: models.py  repositories.py  serializers.py  service.py  urls.py  views.py
user/migrations/: 0001_initial.py  0002_alter_user_email_alter_user_name_alter_user_password.py
utils/: auth_decorators.py  auth_provider.py  filesystem_handler.py  orm_filter_mapper.py  orm_id_suffix_handler.py  validation.py
utils/text/: text_handler.py  tts_provider.py
